force-app/main/default/objects/Session__c/Session__c.object-meta.xml
<CustomObject>
    <label>Session</label>
    <nameField>
        <displayFormat>S-{00000}</displayFormat>
        <label>Session Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>