force-app/main/default/objects/Session__c/fields/Anecdotal_Notes__c.field-meta.xml
<CustomField>
    <fullName>Anecdotal_Notes__c</fullName>
    <label>Anecdotal Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>