force-app/main/default/objects/Session__c/fields/BOC__c.field-meta.xml
<CustomField>
    <fullName>BOC__c</fullName>
    <label>BOC</label>
    <summaryForeignKey>Session_BOC__c.Session__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>