force-app/main/default/objects/Session__c/fields/BoC_Incomplete__c.field-meta.xml
<CustomField>
    <fullName>BoC_Incomplete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BoC Incomplete</label>
    <type>Checkbox</type>
</CustomField>