force-app/main/default/objects/Session__c/fields/ClientID__c.field-meta.xml
<CustomField>
    <fullName>ClientID__c</fullName>
    <formula>Client__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ClientID</label>
    <type>Text</type>
</CustomField>