force-app/main/default/objects/Session__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <defaultValue>Today ()</defaultValue>
    <label>Date</label>
    <type>Date</type>
</CustomField>