force-app/main/default/objects/Session__c/fields/Next_Notes__c.field-meta.xml
<CustomField>
    <fullName>Next_Notes__c</fullName>
    <inlineHelpText>Notes for the next session</inlineHelpText>
    <label>Next Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>