force-app/main/default/objects/Session__c/fields/Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Reviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reviewed</label>
    <type>Checkbox</type>
</CustomField>