force-app/main/default/objects/Session__c/fields/Session_Length__c.field-meta.xml
<CustomField>
    <fullName>Session_Length__c</fullName>
    <inlineHelpText>The session length in hours</inlineHelpText>
    <label>Duration (Hrs)</label>
    <precision>3</precision>
    <required>true</required>
    <scale>1</scale>
    <type>Number</type>
</CustomField>