force-app/main/default/objects/Session__c/fields/Session_Location__c.field-meta.xml
<CustomField>
    <fullName>Session_Location__c</fullName>
    <label>Session Location</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LFL-Kew</fullName>
            </value>
            <value>
                <fullName>Client-Home</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Kinder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>