force-app/main/default/objects/Session__c/fields/Session_Objectives_Count__c.field-meta.xml
<CustomField>
    <fullName>Session_Objectives_Count__c</fullName>
    <label>Session Objectives Count</label>
    <summaryForeignKey>Session_Obj__c.Session__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>