force-app/main/default/objects/Session__c/fields/Statistics_Summary__c.field-meta.xml
<CustomField>
    <fullName>Statistics_Summary__c</fullName>
    <label>Statistics Summary</label>
    <type>TextArea</type>
</CustomField>