force-app/main/default/objects/Session__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
                <isActive>false</isActive>
                <label>Complete</label>
            </value>
            <value>
                <fullName>Planned</fullName>
                <isActive>false</isActive>
                <label>Planned</label>
            </value>
            <value>
                <fullName>Reviewed</fullName>
                <isActive>false</isActive>
                <label>Reviewed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>