force-app/main/default/objects/Session__c/fields/Therapist__c.field-meta.xml
<CustomField>
    <fullName>Therapist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Therapist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>