force-app/main/default/objects/Session__c/fields/Therapist_Name__c.field-meta.xml
<CustomField>
    <fullName>Therapist_Name__c</fullName>
    <formula>Therapist__r.FirstName &amp;&quot; &quot;&amp; Therapist__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Therapist Name</label>
    <type>Text</type>
</CustomField>