force-app/main/default/objects/Session__c/fields/Therapist_Two__c.field-meta.xml
<CustomField>
    <fullName>Therapist_Two__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Therapy Assistant Two</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SessionsTherapist2</relationshipName>
    <type>Lookup</type>
</CustomField>