force-app/main/default/objects/Session__c/validationRules/Session_Duration_Less_Than_Or_Equal_To_8.validationRule-meta.xml
<ValidationRule>
    <fullName>Session_Duration_Less_Than_Or_Equal_To_8</fullName>
    <active>true</active>
    <errorConditionFormula>Session_Length__c &gt; 8</errorConditionFormula>
    <errorDisplayField>Session_Length__c</errorDisplayField>
    <errorMessage>Session length cannot be greater than 8 hours</errorMessage>
</ValidationRule>