force-app/main/default/objects/Session__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Client__c</columns>
    <columns>Date__c</columns>
    <columns>Session_Length__c</columns>
    <columns>Therapist__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>