force-app/main/default/objects/Session__c/listViews/Closed_Sessions_This_Month.listView-meta.xml
<ListView>
    <fullName>Closed_Sessions_This_Month</fullName>
    <columns>NAME</columns>
    <columns>Client__c</columns>
    <columns>Date__c</columns>
    <columns>Session_Location__c</columns>
    <columns>Status__c</columns>
    <columns>Session_Objectives_Count__c</columns>
    <columns>Therapist__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Closed</value>
    </filters>
    <filters>
        <field>Date__c</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>Closed Sessions This Month</label>
</ListView>