force-app/main/default/objects/Session__c/listViews/Closed_Sessions_This_Week.listView-meta.xml
<ListView>
    <fullName>Closed_Sessions_This_Week</fullName>
    <columns>NAME</columns>
    <columns>Client__c</columns>
    <columns>Date__c</columns>
    <columns>Session_Location__c</columns>
    <columns>Session_Length__c</columns>
    <columns>Status__c</columns>
    <columns>Session_Objectives_Count__c</columns>
    <columns>Therapist__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Closed</value>
    </filters>
    <filters>
        <field>Date__c</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>Closed Sessions This Week</label>
</ListView>