force-app/main/default/objects/Session__c/listViews/Open_Sessions.listView-meta.xml
<ListView>
    <fullName>Open_Sessions</fullName>
    <columns>NAME</columns>
    <columns>Client__c</columns>
    <columns>Date__c</columns>
    <columns>Status__c</columns>
    <columns>Session_Objectives_Count__c</columns>
    <columns>Therapist__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Session_Length__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <label>Open Sessions</label>
</ListView>