force-app/main/default/objects/Session__c/listViews/Open_Sessions_PAST.listView-meta.xml
<ListView>
    <fullName>Open_Sessions_PAST</fullName>
    <columns>NAME</columns>
    <columns>Client__c</columns>
    <columns>Date__c</columns>
    <columns>Status__c</columns>
    <columns>Session_Objectives_Count__c</columns>
    <columns>Therapist__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date__c</field>
        <operation>lessThan</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <label>Open Sessions PAST</label>
</ListView>